Fix paragraph spacing

--- a/styles/explainerModal.module.less
+++ b/styles/explainerModal.module.less
@@ -39,6 +39,10 @@
       }
     }
 
+    p {
+      margin-bottom: 1em;
+    }
+
     @media (max-width: @screen-lg) {
       max-height: calc(500px - 56px);
     }
